Added ArUco markers, configured CMake to build  file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,9 @@ find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
 
 add_executable(main src/main.cpp)
+# ArUco Demo
+add_executable(aruco src/aruco.cpp)
+
 target_link_libraries(main ${OpenCV_LIBS})
+# ArUco Demo
+target_link_libraries(aruco ${OpenCV_LIBS})
