--- a/.gitignore
+++ b/.gitignore
@@ -57,7 +57,7 @@ dkms.conf
 /CMakeUserPresets.json
 
 # Common build directories
-/build*/
+/build
 
 # CI jobs that run in symlinked trees produce these artifacts.
 /real_work/
