Added comments to CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
+# Initialize CMake project
 project(crackc LANGUAGES CXX)
 
 # Use modern C++ standard
@@ -7,10 +8,13 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# Locate Package Dependencies
+# Locate package dependencies
 find_package(OpenCV REQUIRED)
 
 include_directories(${OpenCV_INCLUDE_DIRS})
-# ArUco Demo
+
+# Link the necessary libraries to source files
+target_link_libraries(aruco ${OpenCV_LIBS}) 
+
+# Generate executables
 add_executable(aruco src/aruco.cpp)
-target_link_libraries(aruco ${OpenCV_LIBS})
