Updated the OpenCV installation to be `vcpkg` in `.yml` file

--- a/.github/workflows/crackc.yml
+++ b/.github/workflows/crackc.yml
@@ -4,7 +4,6 @@ name: CrackC Build and Test
 on:
   push:
     branches: [ "main" ]
-  
   pull_request:
     branches: [ "main" ]
 
@@ -16,60 +15,43 @@ jobs:
       fail-fast: false
       
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
         build_type: [Release]
-        c_compiler: [gcc, clang, cl]
-        
-        include:
-          - os: windows-latest
-            c_compiler: cl
-            cpp_compiler: cl
-          - os: ubuntu-latest
-            c_compiler: gcc
-            cpp_compiler: g++
-          - os: ubuntu-latest
-            c_compiler: clang
-            cpp_compiler: clang++
-        
-        exclude:
-          - os: windows-latest
-            c_compiler: gcc
-          - os: windows-latest
-            c_compiler: clang
-          - os: ubuntu-latest
-            c_compiler: cl
+        c_compiler: [gcc]
+        cpp_compiler: [g++]
 
     steps:
-    # Checkout repository source code
+    # Checkout repo
     - uses: actions/checkout@v4
 
-    # Install OpenCV development libraries (only on Linux)
-    - name: Install OpenCV (Linux only)
-      if: runner.os == 'Linux'
+    # Install vcpkg and OpenCV (with Aruco)
+    - name: Install OpenCV (with `vcpkg`)
       run: |
-        sudo apt update
-        sudo apt install -y libopencv-dev
+        git clone https://github.com/microsoft/vcpkg.git
+        ./vcpkg/bootstrap-vcpkg.sh
+        ./vcpkg/vcpkg install opencv4[core,highgui,imgproc,aruco] --triplet x64-linux
 
-    # Define build output directory
+    # Set build output directory
     - name: Set build output directory
       id: strings
       shell: bash
       run: echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
-    # Run CMake to configure the project
+    # Configure CMake with vcpkg toolchain
     - name: Configure CMake
       run: >
         cmake -B ${{ steps.strings.outputs.build-output-dir }}
         -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+        -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake
         -S ${{ github.workspace }}
 
-    # Build the project using the configured build system
+    # Build the project
     - name: Build project
       run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
 
-    # Run CTest to execute any tests defined in CMake
+    # Run tests (if any)
     - name: Run tests
       working-directory: ${{ steps.strings.outputs.build-output-dir }}
       run: ctest --build-config ${{ matrix.build_type }}
