--- a/.github/workflows/crackc.yml
+++ b/.github/workflows/crackc.yml
@@ -28,7 +28,7 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         sudo apt update
-        sudo apt install -y autoconf automake libtool pkg-config
+        sudo apt install -y autoconf automake libtool pkg-config m4 build-essential
 
 
     # Install vcpkg and OpenCV (with Aruco)
