--- a/.github/workflows/crackc.yml
+++ b/.github/workflows/crackc.yml
@@ -75,7 +75,7 @@ jobs:
         sudo apt-get install -y \
           build-essential \
           cmake \
-          ninja \
+          ninja-build \
           wget \
           unzip \
           git
